<resources>
    <string name="app_name">iTube</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>

    <string name="ytURL">YouTube URL:</string>
    <string name="play">PLAY</string>
    <string name="add">ADD TO PLAYLIST</string>
    <string name="playlist">MY PLAYLIST</string>

    <string name="full">Full Name:</string>
    <string name="confirm">Confirm Password:</string>
    <string name="create">Create Account</string>
    <string name="back">Back</string>

    <string name="playlistTitle">My Playlist</string>
</resources>