<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center">

    <TextView
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ytURL"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/urlInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/box_border"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        tools:ignore="LabelFor,TextFields,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="18dp"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:padding="10dp"
        android:text="@string/play"
        android:textSize="20sp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:padding="10dp"
        android:text="@string/add"
        android:textSize="20sp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/playlistButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:padding="10dp"
        android:text="@string/playlist"
        android:textSize="20sp"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>